<resources>
    <string name="app_name">AutoTregu.KS</string>
    <string name="title_activity_kryefaqja">KryefaqjaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Kyçu / Krijo Llogari</string>
    <string name="kerko">Kërko</string>
    <string name="kerkimet">Kërkimet e mia</string>
    <string name="kryefaqja">Kryefaqja</string>
    <string name="postimet">Postimet e ruajtura</string>
    <string name="title_activity_krijo_llogari">KrijoLlogariActivity</string>
    <string name="postimet_e_mia">Postimet e mia</string>
    <string name="posto">Posto shpallje të re</string>
    <string name="logout">Mbyll Llogarinë</string>
    <string name="profili">Profili</string>
    <string name="raporto">Raporto gabime</string>
    <string name="ndihma">Ndihma</string>
    <string name="preferencat">Preferencat</string>

    <string-array name="qytetet">
        <item>Qyteti</item>
        <item>Artanë</item>
        <item>Dragash</item>
        <item>Drenas</item>
        <item>Elez Han</item>
        <item>Ferizaj</item>
        <item>Fushë Kosovë</item>
        <item>Gjakovë</item>
        <item>Gjilan</item>
        <item>Graçanicë</item>
        <item>Istog</item>
        <item>Junik</item>
        <item>Kamenicë</item>
        <item>Kaqanik</item>
        <item>Klinë</item>
        <item>Leposaviç</item>
        <item>Lipjan</item>
        <item>Mitrovicë</item>
        <item>Novobërdë</item>
        <item>Obiliq (Kastriot)</item>
        <item>Pejë</item>
        <item>Podujevë</item>
        <item>Prishtinë</item>
        <item>Prizren</item>
        <item>Rahovec</item>
        <item>Skenderaj</item>
        <item>Suharekë</item>
        <item>Shtëme</item>]
        <item>Shtime</item>
        <item>Viti</item>
        <item>Vushtrri</item>
        <item>Zveçan</item>
    </string-array>

    <string-array name="kryesore">
        <item>Marka: *</item>
        <item>Modeli: *</item>
        <item>Karburanti: *</item>
        <item>Varianti i modelit: </item>
        <item>Tipi i karrocerisë: *</item>
        <item>Numri i dyerve: *</item>
        <item>Regjistrimi i parë: *</item>
        <item>Të kaluara (km): *</item>
        <item>Veturë me defekt?</item>
        <item>Veturë e aksidentuar?</item>
        <item>Transmisioni: *</item>
        <item>Fuqia motorike:</item>
    </string-array>

    <string-array name="kryesore_desc">
        <item>Zgjedh markën</item>
        <item>Zgjedh modelin</item>
        <item>Zgjedh karburantin</item>
        <item>Pa përcaktuar </item>
        <item>Zgjedh formën e veturës</item>
        <item>Zgjedh numrin e dyerve</item>
        <item>Pa përcaktuar</item>
        <item>Pa përcaktuar</item>
        <item>Pa përcaktuar</item>
        <item>Pa përcaktuar</item>
        <item>Pa përcaktuar</item>
        <item>Pa përcaktuar</item>
    </string-array>

    <string-array name="dyer">
        <item>Pa përcaktuar</item>
        <item>2/3</item>
        <item>4/5</item>
        <item>6/7</item>
    </string-array>

    <string-array name="door_search">
        <item>Çfardo</item>
        <item>2/3</item>
        <item>4/5</item>
        <item>6/7</item>
    </string-array>

    <string-array name="opsione">
        <item>Pa pëcaktuar</item>
        <item>Po</item>
        <item>Jo</item>
    </string-array>

    <string-array name="targat">
        <item>Pa përcaktuar</item>
        <item>Vendore</item>
        <item>Të Shqipërisë</item>
        <item>Të huaja</item>
    </string-array>

    <string-array name="transmisioni">
        <item>Pa përcaktuar</item>
        <item>Manual</item>
        <item>Gjysëm Automatik</item>
        <item>Automatik</item>
    </string-array>

    <string-array name="ulse">
        <item>Pa përcaktuar</item>
        <item>1+1</item>
        <item>2+1</item>
        <item>3+1</item>
        <item>4+1</item>
        <item>5+1</item>
        <item>6+1</item>
        <item>Më shumë</item>
    </string-array>

    <string-array name="pronar">
        <item>Pa përcaktuar</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="ngjyra">
        <item>Pa përcaktuar</item>
        <item>E bardhë</item>
        <item>E gjelbër</item>
        <item>E hirtë</item>
        <item>E kaltër</item>
        <item>E kuqe</item>
        <item>E portokalltë</item>
        <item>E verdhë</item>
        <item>E zezë</item>
        <item>Vjollcë</item>
        <item>Tjetër</item>
    </string-array>

    <string-array name="enterieri">
        <item>Pa përcaktuar</item>
        <item>Lëkurë</item>
        <item>Gjysëm lëkurë</item>
        <item>Mëndafsh</item>
        <item>Tjetër</item>
    </string-array>

    <string-array name="ngjyraEnterier">
        <item>Pa përcaktuar</item>
        <item>E zezë</item>
        <item>E hirtë</item>
        <item>E kremtë</item>
        <item>E kaftë</item>
        <item>Tjetër</item>
    </string-array>

    <string-array name="kondicioneri">
        <item>Pa përcaktuar</item>
        <item>Nuk ka klimë</item>
        <item>Klimë manuale</item>
        <item>Klimë automatike</item>
        <item>Klimë automatike 2 zonale</item>
        <item>Klimë automatike 3 zonale</item>
        <item>Klimë automatike 4 zonale</item>
    </string-array>

    <string-array name="security">
        <item>ABS</item>
        <item>4x4</item>
        <item>ESP</item>
        <item>Drita adaptuese</item>
        <item>Sensor Dritash</item>
        <item>Drita të përparme XENON</item>
        <item>Drita të përparme BI-XENON</item>
        <item>Sensora Shiu</item>
        <item>Sistem Start-Stop</item>
    </string-array>

    <string-array name="owners">
        <item>Pa përcaktuar</item>
        <item>Deri 1</item>
        <item>Deri 2</item>
        <item>Deri 3</item>
        <item>Deri 4</item>
        <item>Deri 5</item>
        <item>Më shumë se 5</item>
    </string-array>

    <string-array name="parking">
        <item>Sensora Parkimi</item>
        <item>Kamerë vëzhgimi</item>
        <item>Sistem Autonom Parkimi</item>
    </string-array>

    <string-array name="seller">
        <item>Privat dhe Autosallon</item>
        <item>Privat</item>
        <item>Autosallon</item>
    </string-array>

    <string-array name="airbag">
        <item>Airbag të shoferit</item>
        <item>Airbag anësor</item>
        <item>Airbag të prapmë</item>
        <item>Airbag të tjerë</item>
    </string-array>

    <string-array name="kerkoCmimet">
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>12500</item>
        <item>15000</item>
        <item>17500</item>
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
        <item>35000</item>
        <item>40000</item>
        <item>45000</item>
        <item>50000</item>
        <item>60000</item>]
        <item>70000</item>
        <item>80000</item>
        <item>90000</item>
        <item>10000</item>
        <item>Çfardo</item>
    </string-array>

    <string-array name="kerkoKm">
        <item>0</item>
        <item>10000</item>
        <item>20000</item>
        <item>30000</item>
        <item>40000</item>
        <item>50000</item>
        <item>60000</item>
        <item>70000</item>
        <item>80000</item>
        <item>90000</item>
        <item>100000</item>
        <item>110000</item>
        <item>120000</item>
        <item>130000</item>
        <item>140000</item>
        <item>150000</item>
        <item>160000</item>
        <item>170000</item>
        <item>180000</item>
        <item>190000</item>
        <item>200000</item>
        <item>Çfardo</item>
    </string-array>

    <string-array name="kerkoFuqia">
        <item>0 KW</item>
        <item>25 KW</item>
        <item>35 KW</item>
        <item>45 KW</item>
        <item>55 KW</item>
        <item>65 KW</item>
        <item>75 KW</item>
        <item>85 KW</item>
        <item>95 KW</item>
        <item>110 KW</item>
        <item>145 KW</item>
        <item>185 KW</item>
        <item>220 KW</item>
        <item>260 KW</item>
        <item>295 KW</item>
        <item>335 KW</item>
        <item>Çfardo</item>
    </string-array>

    <string-array name="gjendja">
        <item>I ri dhe i Vjetër</item>
        <item>I ri</item>
        <item>I vjetër</item>
    </string-array>

    <string-array name="karburanti">
        <item>Dizel</item>
        <item>Benzin</item>
        <item>Benzin/Plin</item>
        <item>Elektrik</item>
        <item>Hibrid</item>
    </string-array>

    <string-array name="karroceria">
        <item>Sedan</item>
        <item>Karavan</item>
        <item>Kabriolet</item>
        <item>Off-road</item>
        <item>Veturë e vogel</item>
    </string-array>

    <string-array name="interior_features">
        <item>Bluetooth</item>
        <item>On-board Kompjuter</item>
        <item>CD Player</item>
        <item>Xhama elektrik</item>
        <item>Ulëse me lëvizje elektrike</item>
        <item>Ulëse me nxemje</item>
        <item>Ulëse sportive</item>
        <item>MP3 Konektor</item>
        <item>Aux</item>
        <item>Pulla në timon</item>
        <item>Sistem Navigacioni</item>
        <item>Shiber</item>
        <item>Panoramë</item>
        <item>Bagazh në çati</item>
        <item>Mbyllje qendrore</item>
    </string-array>

    <string-array name="report_types">
        <item>Lloji i raportit</item>
        <item>Raporto Perdorues</item>
        <item>Raporto dështim në App</item>
    </string-array>


    <string name="title_activity_login">LoginActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="shkronjat">abcçdeëfghijkmnopqrstuvxyzABCÇDEËFGHIJKLMNOPQRSTUVXYZ</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_edit">Ndrysho</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_car_dealers_map">Map</string>
    <string name="account">Llogaria</string>
    <string name="car_dealers">Autosallonet</string>
    <string name="saved_posts">Postimet e ruajtura</string>
    <string name="search">Kërko</string>
    <string name="main_page">Kryefaqja</string>
    <string name="profile">Profili</string>
    <string name="application">Aplikacioni</string>
    <string name="make_model_variant">Marka Modeli Varianti</string>
    <string name="not_accidented">I pa aksidentuar? -</string>
    <string name="first_registration">Regjistrimi i parë -</string>
    <string name="km">Km</string>
    <string name="no_text">-</string>
    <string name="kw">KW</string>
    <string name="name_surname">Emri Mbiemri</string>
    <string name="address">Adresa</string>
    <string name="bluetooth">Bluetooth</string>
</resources>
