<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kryefaqja"
            android:icon="@mipmap/kryefaqja"
            android:title="Kryefaqja" />
        <item
            android:id="@+id/nav_kerko"
            android:icon="@mipmap/search"
            android:title="Kërko" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@mipmap/saved"
            android:title="Postimet e ruajtura" />

    </group>


    <item android:title="Aplikacioni">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/settings"
                android:title="@string/preferencat"
                />

            <item
                android:id="@+id/nav_help"
                android:icon="@mipmap/help"
                android:title="@string/ndihma"
                />

            <item
                android:id="@+id/nav_gabime"
                android:icon="@mipmap/report"
                android:title="@string/raporto"
                />
        </menu>
    </item>

    <item android:title="@null" />
    <item
        android:id="@+id/nav_login"
        android:title="@null"
        app:showAsAction="collapseActionView" />
    <item android:title="@null" />

</menu>
