<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/underlined_recycler_search"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp">

    <ProgressBar
        android:id="@+id/searchResultProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/app_logo"/>

    <EditText
        android:id="@+id/postTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:text="@string/make_model_variant"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/postImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=" &#8364;"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/postImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTitle" />

    <TextView
        android:id="@+id/postAksident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="8dp"
        android:text="@string/not_accidented"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/postProduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/first_registration"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/postAksident"
        app:layout_constraintTop_toBottomOf="@+id/postImage" />

    <TextView
        android:id="@+id/postKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/km"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/postProduction"
        app:layout_constraintTop_toBottomOf="@+id/postImage" />

    <TextView
        android:id="@+id/postFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/no_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postAksident" />

    <TextView
        android:id="@+id/postTransmision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/no_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/postFuel"
        app:layout_constraintTop_toBottomOf="@+id/postAksident" />

    <TextView
        android:id="@+id/postPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/no_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTransmision" />

    <TextView
        android:id="@+id/plateDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/no_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/postPlate"
        app:layout_constraintTop_toBottomOf="@+id/postTransmision" />





    <TextView
        android:id="@+id/postPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/kw"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/postTransmision"
        app:layout_constraintTop_toBottomOf="@+id/postAksident" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postPlate"
        android:background="@drawable/background_upperline"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/postOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/name_surname"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/postAdresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:layout_below="@id/postOwner"/>

        <ImageView
            android:id="@+id/imgPostSave"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_parking_red"
            android:layout_centerVertical="true"/>

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>